@@ -6,70 +6,63 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import ktanesolver.annotation.ModuleInfo;
+import ktanesolver.logic.*;
 import org.springframework.stereotype.Service;
-
-import com.fasterxml.jackson.core.type.TypeReference;
 
 import ktanesolver.entity.BombEntity;
 import ktanesolver.entity.ModuleEntity;
 import ktanesolver.entity.RoundEntity;
 import ktanesolver.enums.ModuleType;
-import ktanesolver.logic.ModuleSolver;
-import ktanesolver.logic.SolveResult;
-import ktanesolver.logic.SolveSuccess;
-import ktanesolver.utils.Json;
+import ktanesolver.dto.ModuleCatalogDto;
 
 @Service
-public class WordScrambleSolver implements ModuleSolver<WordScrambleInput, WordScrambleOutput> {
+@ModuleInfo(
+        type = ModuleType.WORD_SCRAMBLE,
+        id = "word_scramble",
+        name = "Word Scramble",
+        category = ModuleCatalogDto.ModuleCategory.MODDED_REGULAR,
+        description = "Unscramble the letters to form words",
+        tags = {"word", "puzzle"}
+)
+public class WordScrambleSolver extends AbstractModuleSolver<WordScrambleInput, WordScrambleOutput> {
 
     // List of valid 6-letter words for the Word Scramble module
     private static final List<String> VALID_WORDS = Arrays.asList("BANANA", "ATTACK", "DAMAGE", "NAPALM", "OTTAWA", "KABOOM", "BLASTS", "CHARGE", "ARCHER", "CASING", "CANNON", "KEYPAD", "DISARM", "FLAMES", "KEVLAR", "WEAPON", "SAPPER", "MORTAR", "BUTTON", "ROBOTS", "BURSTS", "DEVICE", "ROCKET", "DEFUSE", "WIDGET", "MODULE", "LETTER", "SEMTEX", "PERSON", "WIRING");
 
     @Override
-    public ModuleType getType() {
-        return ModuleType.WORD_SCRAMBLE;
-    }
-
-    @Override
-    public Class<WordScrambleInput> inputType() {
-        return WordScrambleInput.class;
-    }
-
-    @Override
-    public SolveResult<WordScrambleOutput> solve(RoundEntity round, BombEntity bomb, ModuleEntity module, WordScrambleInput input) {
+    public SolveResult<WordScrambleOutput> doSolve(RoundEntity round, BombEntity bomb, ModuleEntity module, WordScrambleInput input) {
         String letters = input.letters();
 
         // Validate input
         if (letters == null || letters.length() != 6) {
             WordScrambleOutput output = new WordScrambleOutput(false, "Invalid input: must provide exactly 6 letters", "");
-            return new SolveSuccess<>(output, false);
+            return success(output, false);
         }
 
         // Convert to uppercase for consistency
         letters = letters.toUpperCase();
 
         // Store module state
-        module.getState().put("letters", letters);
+        storeState(module, "letters", letters);
 
         // Find all valid words that can be made from these letters
         List<String> possibleWords = findPossibleWords(letters);
 
         if (possibleWords.isEmpty()) {
             WordScrambleOutput output = new WordScrambleOutput(false, "No valid words found with these letters", "");
-            setModuleSolution(module, output);
-            return new SolveSuccess<>(output, false);
+            return success(output, false);
         }
 
         // For simplicity, return the first valid word found
         // In a real implementation, you might want to consider additional logic
         // such as word frequency, bomb indicators, or other factors
-        String solution = possibleWords.get(0);
+        String solution = possibleWords.getFirst();
 
         String instruction = String.format("Found %d possible word(s). Solution: %s", possibleWords.size(), solution);
 
         WordScrambleOutput output = new WordScrambleOutput(true, instruction, solution);
-        setModuleSolution(module, output);
-        return new SolveSuccess<>(output, true);
+        return success(output);
     }
 
     private List<String> findPossibleWords(String letters) {
@@ -112,10 +105,4 @@ public class WordScrambleSolver implements ModuleSolver<WordScrambleInput, WordS
         return true;
     }
 
-    private void setModuleSolution(ModuleEntity module, WordScrambleOutput output) {
-        module.setSolved(output.solved());
-        Map<String, Object> convertedValue = Json.mapper().convertValue(output, new TypeReference<>() {
-        });
-        convertedValue.forEach(module.getSolution()::put);
-    }
 }
